# walmart-sales-forecasting

./: .gitignore  README.md  pyproject.toml
Miscellaneous/: analysis.md  extract_markdown.py  extras.txt  forecasting.md
Stationary/: forecasting.ipynb
Website/: _config.yml  _toc.yml  custom.css  format_book.py
Website/_build/html/: .buildinfo  genindex.html  home.html  objects.inv  search.html  searchindex.js  vercel.json
Website/_build/html/_sources/: home.md
Website/_build/html/_sources/about/: about.md
Website/_build/html/_sources/main/: forecasting.ipynb
Website/_build/html/_sources/summary/: summary.md
Website/_build/html/_static/: custom.css
Website/_build/html/about/: about.html
Website/_build/html/main/: analysis.html  forecasting.html
Website/_build/html/summary/: introduction.html  summary.html
Website/main/: forecasting.ipynb  results.json
Website/summary/: introduction.md  summary.md
