[project]
name = "walmartsalesforecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "prophet>=1.1.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.34.0",
    "xgboost>=2.1.4",
    "ydata-profiling>=4.12.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter-book>=1.0.3",
    "notebook>=7.3.2",
    "pyqt6>=6.8.1",
]
